--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>連続式タイマーくん</title>
+    <title>連続タイマー君</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +23,7 @@
 
         <!-- ===== Header ===== -->
         <header class="app-header">
-            <h1 class="app-title">⏱ 連続タイマー</h1>
+            <h1 class="app-title">⏱ 連続タイマー君</h1>
             <div class="header-right">
                 <button id="btn-settings" class="icon-btn" title="設定">⚙️</button>
                 <button id="btn-data" class="icon-btn" title="データ操作">📦</button>
